--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,19 @@
 server.port=8617
-server.ssl.enabled=true
-server.ssl.key-store=keystore.p12
-server.ssl.key-store-password=123456
-server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=partner_ssl
+# ?? pc??? ?? ???
+#server.ssl.enabled=true
+#server.ssl.key-store=keystore.p12
+#server.ssl.key-store-password=123456
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-alias=partner_ssl
+
+#h2 console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+#h2 db
+#spring.datasource.url=jdbc:h2:~/test;
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
